# dovecot

./: TODO.mongodb  configure.ac
doc/example-config/: dovecot-mongodb.conf.ext
src/: Makefile.am
src/auth/: Makefile.am  db-mongodb.c  db-mongodb.h  passdb-mongodb.c  passdb.c  userdb-mongodb.c  userdb.c
src/dict/: Makefile.am
src/lib-dict/: Makefile.am  dict-mongodb-settings.c  dict-mongodb-settings.h  dict-mongodb.c  dict.c  test-dict.c
src/lib-mongodb/: Makefile.am  mongodb-api-private.h  mongodb-api.c  mongodb-api.h  mongodb-driver.c
